<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android" >

        <TextView
            android:id="@+id/txt_resetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/dark_text" />

        <TextView
            android:id="@+id/txt_newpassword"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_below="@id/txt_resetpassword"
            android:textSize="@dimen/fab_margin" />

        <EditText
            android:id="@+id/edt_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_newpassword"
            android:hint="@string/enter_password" />

        <TextView
            android:id="@+id/txt_confirmpasswod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/confirm_password"
            android:layout_below="@id/edt_newpassword"
            android:textSize="@dimen/fab_margin" />

        <EditText
            android:id="@+id/edt_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_confirmpasswod"
            android:hint="@string/confirm_password" />

        <Button
            android:id="@+id/btn_resetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_confirmpassword"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/edit_text"
            />

        <TextView
            android:id="@+id/txt_backtologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_signin"
            android:layout_alignBaseline="@id/btn_resetpassword"
            android:layout_toEndOf="@id/btn_resetpassword"
            android:layout_below="@id/btn_resetpassword"
            android:textColor="@color/black"/>


    </RelativeLayout>
</FrameLayout>