<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <TextView
       android:id="@+id/txt_firstname"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/first_name"
       android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txt_lastname"
        android:layout_below="@id/txt_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txt_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@id/txt_lastname"
        android:text="@string/email_id"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/txt_emailid"
        android:background="@drawable/ic_delete_forever_black_24dp" />


</RelativeLayout>