<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_usersfirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"/>

        <TextView
            android:id="@+id/txt_userslastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_usersfirstname"
            android:text="@string/last_name"/>

        <TextView
            android:id="@+id/txt_usersemailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:layout_below="@id/txt_userslastname"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_usersemailid"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="10dip"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_delete_forever_black_24dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>